# ITMO-2nd_year

AlgorithmsAndDataStructures/: .clang-format  .clang-tidy  README.MD  template.qmd
AlgorithmsAndDataStructures/contest/: a.c  b.c  c.cpp  d.c  e.c  f.c  g.c  h.c  i.cpp  j.c  k.c  l.c  n.c  o.c  p.c
AlgorithmsAndDataStructures/timus/introduction/: 1155-stupid.c  1155-stupid_test.sh  1155.c  1155_test.sh  1296.c  1296_gen_set.py  1296_test.sh
CSA/lab3/: README.md  f32a-2.yaml  f32a-7.yaml  f32a-opt.py  f32a-opt.s  f32a.c  f32a.py  f32a.s  m68k-10.yaml  m68k-2-2.yaml  m68k-2.yaml  m68k-5.yaml  m68k-9.yaml  m68k.s  m68k.yaml  reports.txt  risc-iv-5-1.yaml  risc-iv.yaml  test-m68k.sh
CSA/lab3/acc32/: acc32-2.yaml  acc32.s  acc32.yaml
CSA/lab3/f32a/: f32a-3.yaml  f32a-4.yaml  f32a-5.yaml  (+5 more)
ComplexAnalysis(ТФКП)/Lab1/: .gitignore  LICENSE.md  xmake.lua
OptMethods/lab2/: main.py
OptMethods/lab3/: main-ai.py  main.py  main2.py  trace.py
PL/1st/: xmake.lua
PL/2st/: compile_commands.json  xmake.lua
Physics/: 1.c  2.c  3.c  3_plt.py  4.py  5-semi.py  5.py  7.out.txt  7.py  8.py  pr14.py
Physics/10/: main.pde
Physics/pr15/: .gitignore  Cargo.toml
Physics/pr9/: Cargo.toml
SoftwareEngineeringBasics/lab2/: out.txt  rm_svn.sh  svn.sh
Web/Lab1-rusted/client/: Cargo.toml  index.html
Web/Lab1-rusted/client/html/: index.html
Web/Lab1-rusted/client/src/: lib.rs  types.rs
Web/Lab1-rusted/server/: Cargo.toml
Web/Lab1-rusted/server/src/: commands.rs  main.rs  response_factory.rs  types.rs
Web/Lab2/: pom.xml
Web/Lab3/: pom.xml
Web/Lab4/: .gitignore
(+229 files in other folders)
