[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
console_error_panic_hook = "0.1.7"
custom-print = "1.0.0"
gloo = "0.11.0"
serde = "1.0.225"
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = ["InputEvent", "HtmlFormElement", "HtmlTableSectionElement", "HtmlTableRowElement"] }
