[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
debug = "none"
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
incremental = false

[dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
fastcgi = "1.0.0"
log = "0.4.28"
multiline-str = "0.1.1"
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
